[package]
name = "hello-rust"
version = "0.1.0"
authors = ["Serhjii Bilyk <sergiybiluk@gmail.com>"]
edition = "2018"

[dependencies]
rand = "0.6.5"
azul = { git = "https://github.com/maps4print/azul" }

[dev-dependencies.cargo-husky]
version = "1"
default-features = false 
features = ["precommit-hook"]